--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
